--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -103,42 +103,56 @@ hr {
   height: 0;
   overflow: visible;
 }
+
+#globo {
+  font-size: 14px;
+  font-family: Calibri;
+  font-style: unset;
+  color: #6610f2;
+}
+
+#globo2{
+  font-size: 18px;
+  font-family: Calibri;
+  font-style: unset;
+  color: #000;
+}
+
 .contenedor{
   width: 100%;
   margin: auto;
   overflow: hidden;
-  background-color: #2C3E50;
+  /*background-color: #2C3E50;*/
+  background-color: #ecf0f1;
     /*padding-top: 30px;
     min-height: 70px;
     border-bottom: 2px solid #fff;*/
 }
 
 .encabezado{
-  width: 40%;
-  height: 30px;
+  /*width: 40%;
+  height: 15px;
   background-color: #2C3E50;
-  margin-top: 10px;
+  background-color: #ecf0f1;
+  margin-top: -35px;
   margin-left: 50%;
   text-align: right;
   color: #ffffff;
-  font-size: small;
+  font-size: small;*/
 }
 
 img{
     background-size: cover;
-    border-style: 2px color black;
+  float: unset;
 }
 h3{
-    text-align: left;
-    color: #fff;
-    margin-top: 20px;
-    margin-left: 5%;
+    text-align: center;
+    color: #000;
+
 }
 h4{
-    text-align: left;
-    color: #ffffff;
-    margin-top: 0px;
-    margin-left: 5%;
+    text-align: center;
+    color: #000;
 }
 h1, h5, h6 {
   margin-top: 0;
@@ -165,17 +179,16 @@ h1, h5, h6 {
 }
 
 footer {
-  padding: 5px;
+  padding: 2px;
   margin-top: 60px;
   color: #fff;
   background-color: #18BC9C;
+ /*background-color: #7b8a8b;*/
   text-align: center;
 }
 
 p {
-  margin-top: 10px;
   margin-bottom: 1rem;
-  text-align: justify;
 }
 
 abbr[title],
@@ -641,6 +654,7 @@ pre code {
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
+
 }
 
 @media (min-width: 576px) {
@@ -673,6 +687,7 @@ pre code {
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
+  background-color: #ecf0f1;
 }
 
 .row {
@@ -2722,7 +2737,7 @@ fieldset:disabled a.btn {
 
 .btn-secondary {
   color: #fff;
-  background-color: #95a5a6;
+  background-color: #454d55;
   border-color: #95a5a6;
 }
 
@@ -4502,7 +4517,7 @@ input[type="button"].btn-block {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 1rem 1rem;
+  padding: 0.25rem 0.25rem;
 
 }
 
@@ -4575,6 +4590,7 @@ input[type="button"].btn-block {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  height: 5%;
 }
 
 .navbar-toggler {
@@ -5507,7 +5523,7 @@ a.badge-dark:focus, a.badge-dark.focus {
 .jumbotron {
   padding: 2rem 1rem;
   margin-bottom: 2rem;
-  background-color: #ecf0f1;
+  background-color: #20c997;
   border-radius: 0.3rem;
 }
 
@@ -10649,6 +10665,7 @@ a.text-dark:hover, a.text-dark:focus {
 #consulta{
   margin-left: 30%;
   margin-right: 30%;
+  margin-top: 25px;
 }
 
 #botonconculta{
